--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "rimraf build && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add build",
     "format": "prettier --write \"src/**/*.{js,ts}\"",
     "lint": "eslint \"src/**/*.{js,ts}\"",
     "lint:fix": "eslint . --fix",
@@ -13,6 +15,11 @@
     "start": "node ./build/index.js",
     "start:dev": "nodemon src/index.ts"
   },
+  "pre-commit": [
+      "ts.check",
+      "build",
+      "add-build"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -33,7 +40,9 @@
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.10.0",
     "eslint": "^9.12.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
